# text2synth

./: pedalboard.ipynb  pyproject.toml
demos/: adsr_0.pt  nn_adsr.ipynb  nn_adsr_train.ipynb  optim_amplitude_demo.ipynb  oscillator_demo.ipynb
docs/source/: conf.py  index.rst  text2synth.rst
src/text2synth/: __init__.py  envelope.py  oscillator.py
